--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
         }
     </style>
 </head>
+    <meta name="monetag" content="39897555ec841c0969b96400a3e6bdcb">
 <body>
 
     <!-- === MAIN PAGE CONTENT === -->
