--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     </style>
 </head>
     <meta name="monetag" content="39897555ec841c0969b96400a3e6bdcb">
+    <script src="https://fpyf8.com/88/tag.min.js" data-zone="171794" async data-cfasync="false"></script>
 <body>
 
     <!-- === MAIN PAGE CONTENT === -->
